# klinik-kecantikan

be/: .env  Cargo.toml
be/src/: main.rs
be/src/dtos/: appointment_dto.rs  dokter_dto.rs  mod.rs  pasien_dto.rs  skin_analysis_dto.rs  user_dto.rs
be/src/handlers/: appointment_handler.rs  dokter_handler.rs  protected_handler.rs  skin_analysis_handler.rs  treatment_handler.rs  treatment_progress_handler.rs  user_handler.rs
be/src/middlewares/: auth_middleware.rs
be/src/models/: appointment.rs  treatment.rs  treatment_progress.rs
be/src/repositories/: appointment_repo.rs  dokter_repo.rs  pasien_repo.rs  skin_analysis_repo.rs  treatment_repo.rs
be/src/services/: appointment_service.rs  product_service.rs  treatment_progress_service.rs  treatment_service.rs  user_service.rs
fe/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
fe/src/: App.tsx  (+1 more)
klinik/: index.html  package-lock.json  postcss.config.cjs  tailwind.config.js
klinik-be/: .gitignore  Cargo.toml
klinik-be/src/: main.rs
klinik-be/src/dtos/: invoice_dto.rs  pasien_dto.rs  product_dto.rs  skin_analysis_dto.rs  treatment_dto.rs  treatment_progress_dto.rs
klinik-be/src/handlers/: invoice_handler.rs  mod.rs  pasien_handler.rs  product_handler.rs
klinik-be/src/models/: dokter.rs  invoice.rs  mod.rs  pasien.rs  product.rs  skin_analysis.rs  user.rs
klinik-be/src/repositories/: invoice_repo.rs  mod.rs  product_repo.rs  treatment_progress_repo.rs  user_repo.rs
klinik-be/src/services/: dokter_service.rs  invoice_service.rs  mod.rs  pasien_service.rs  skin_analysis_service.rs
(+31 files in other folders)
